Add cache-dependency-path for Node.js workflow

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,7 +22,6 @@ jobs:
       matrix:
         node-version: [18.x, 20.x, 22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-        cache-dependency-path: ["./teams-app/package-lock.json"]
 
     steps:
     - uses: actions/checkout@v4
@@ -31,6 +30,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: "./teams-app/package-lock.json"
     - run: pwd
     - run: npm ci
     - run: npm run build --if-present
