--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,18 +14,59 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [20.x, 22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 22.x
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '22.x'
         cache: 'npm'
     - run: pwd
     - run: npm ci
     - run: npm run build --if-present
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-artifacts
+        path: dist/
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    
+    steps:
+    - name: Checkout teams-app-site repository
+      uses: actions/checkout@v4
+      with:
+        repository: rasifix/teams-app-site
+        token: ${{ secrets.GITHUB_TOKEN }}
+        path: teams-app-site
+        
+    - name: Download build artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: build-artifacts
+        path: build-artifacts
+        
+    - name: Deploy to teams-app-site
+      working-directory: teams-app-site
+      run: |
+        # Remove existing assets (keep .git and other hidden files)
+        find . -maxdepth 1 -not -name '.*' -not -name 'README.md' -exec rm -rf {} +
+        
+        # Copy new build assets
+        cp -r ../build-artifacts/* .
+        
+        # Configure git
+        git config user.name "GitHub Actions"
+        git config user.email "actions@github.com"
+        
+        # Add, commit and push changes
+        git add .
+        if git diff --staged --quiet; then
+          echo "No changes to deploy"
+        else
+          git commit -m "Deploy from teams-app@${{ github.sha }}"
+          git push
+        fi
